--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -19,3 +19,13 @@
   color: #ffffff;
   margin-bottom: 0.5rem;
 }
+@keyframes animate-in {
+  from {
+    opacity: 0;
+    transform: translateY(1rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
