--- a/src/components/PostList.module.css
+++ b/src/components/PostList.module.css
@@ -8,3 +8,8 @@
     grid-template-columns: repeat(3, 30%);
     justify-content: center;
 }
+.noPosts{
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--color-text-secondary);
+}
